Add: two reviews of Cynical Theories

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2752,6 +2752,23 @@
           <q>This rank denialism, this blinkered insistence that free speech is not in danger in 21st-century Britain, is exactly why we need the FSU and as broad a discussion as possible about the importance of the liberty to express oneself.</q>
           And, <q>Things have come to such a pass that these people will literally seek to censor you in one breath and then express alarm at being called censors in the next breath.</q>
         </li>
+        <li>Hoadley-Brill, Samuel:
+          <a href="https://www.liberalcurrents.com/the-cynical-theorists-behind-cynical-theories/">The Cynical Theorists Behind <i class="booktitle">Cynical Theories</i></a>,
+          <i class="website">Liberal Currents</i>, 19.08.2020.
+          <br />This is a review of <i class="booktitle">Cynical Theories</i> by Helen Pluckrose and James Lindsay.
+          <!--@@to PDF!-->
+          Philosophy professor <a href="https://twitter.com/jasonintrator/status/1332040072993116162">Jason Stanley (26.11.2020)</a> wrote about this review on Twitter:
+          <q cite="https://twitter.com/jasonintrator/status/1332040072993116162">Here is an actually philosophically competent review of Lindsay and Pluckrose</q>.
+        </li>
+        <li>Warburton, Nigel:
+          <a href="https://www.spectator.co.uk/article/universities-are-supposed-to-encourage-debate-not-strangle-it">Universities are supposed to encourage debate, not strangle it</a>,
+          <i class="magazine">The Spectator</i>, 14.11.2020.
+          <br />This is a review of <i class="booktitle">Cynical Theories</i> by Helen Pluckrose and James Lindsay.
+          <a href="https://twitter.com/jasonintrator/status/1332026938945310723">Jason Stanley wrote of this review (26.11.2020)</a>:
+          <q cite="https://twitter.com/jasonintrator/status/1332026938945310723">As a philosopher, I was extraordinarily embarrassed to read this review, of a shockingly anti-intellectual work.
+          My goodness ⁦<a href="https://twitter.com/philosophybites">@philosophybites</a> what in G-d’s name were you thinking?!</q>
+          This lead to a heated discussion on Twitter.
+        </li>
       </ul>
     </section>
 
