--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2767,7 +2767,7 @@
           <a href="https://twitter.com/jasonintrator/status/1332026938945310723">Jason Stanley wrote of this review (26.11.2020)</a>:
           <q cite="https://twitter.com/jasonintrator/status/1332026938945310723">As a philosopher, I was extraordinarily embarrassed to read this review, of a shockingly anti-intellectual work.
           My goodness ⁦<a href="https://twitter.com/philosophybites">@philosophybites</a> what in G-d’s name were you thinking?!</q>
-          This lead to a heated discussion on Twitter.
+          This led to a heated discussion on Twitter.
         </li>
       </ul>
     </section>
