Add: Ben-Ghiat: The best books on Fascism

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2160,6 +2160,18 @@
             </li>
           </ul>
         </li>
+        <li>Ben-Ghiat, Ruth:
+          <a href="https://fivebooks.com/best-books/fascism-ruth-ben-ghiat/">The best books on Fascism</a>,
+          <i class="website">Five Books</i>, 01.06.2019.
+          <br />Ben-Ghiat, author of <i class="booktitle">Fascist Modernities</i>, recommends the following books:
+          <ul>
+          <li><i class="booktitle">Anatomy of Fascism</i> by Robert O. Paxton,</li>
+          <li><i class="booktitle">Fascist Spectacle</i> by Simonetta Falasca-Zamponi,</li>
+          <li><i class="booktitle">The Origins of Nazi Violence</i> by Enzo Traverso and Janet Lloyd,</li>
+          <li><i class="booktitle">The Origins of Totalitarianism</i> by Hannah Arendt,</li>
+          <li><i class="booktitle">Family Lexicon</i> by Natalia Ginzburg.</li>
+          </ul>
+        </li>
       </ul>
     </section>
 
