Add: Harris: The Best Introductions to Buddhism

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2172,6 +2172,18 @@
           <li><i class="booktitle">Family Lexicon</i> by Natalia Ginzburg.</li>
           </ul>
         </li>
+        <li>Harris, Elizabeth:
+          <a href="https://fivebooks.com/best-books/best-books-buddhism-elizabeth-harris/">The Best Introductions to Buddhism</a>,
+          <i class="website">Five Books</i>, 17.06.2010. Elizabeth Harris, author of <i class="booktitle">What Buddhists Believe</i>,
+          recommends the following books:
+          <ul>
+            <li><i class="booktitle">Buddhism: The Basics</i> by Cathy Cantwell,</li>
+            <li><i class="booktitle">The First Buddhist Women</i> by Susan Murcott,</li>
+            <li><i class="booktitle">Call Me by My True Names</i> by Thich Nhat Hanh,</li>
+            <li><i class="booktitle">The Art of Living</i> by His Holiness the Dalai Lama,</li>
+            <li><i class="booktitle">Come and See Yourself</i> by Ayya Khema.</li>
+          </ul>
+        </li>
       </ul>
     </section>
 
