Add: h2: Michel Foucault

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1647,6 +1647,76 @@
         <!--More links: https://duckduckgo.com/?q=%22louis+althusser%22+surd%C3%A9termination+litt%C3%A9raire&t=ffab&ia=web -->
       </ul>
 
+      <h3>Michel Foucault (1926 &mdash; 1984)</h3>
+      <ul>
+        <li>Gutting, Gary:
+          <a href="https://fivebooks.com/best-books/gary-gutting-foucault-best-books/">The best books on Foucault</a>,
+          <i class="website">Five Books</i> (no date). Garry Gutting is the author of
+          <i class="booktitle">Foucault: A Very Short Introduction</i> (Oxford University Press, 2005,
+          <a href="https://global.oup.com/academic/product/foucault-a-very-short-introduction-9780192805577"><abbr>ISBN</abbr> 9780192805577</a>).
+          Gutting recommends the following books:
+          <i class="booktitle">How to Read Foucault</i> (2007) by Johanna Oksala,
+          <i class="booktitle">The Philosophy of Foucault</i> (2006) by Todd May,
+          <i class="booktitle">Bodies and Pleasures: Foucault and the Politics of Sexual Normalization</i> (1999) by Ladelle McWhorter,
+          <i class="booktitle">The Cambridge Foucault Lexicon</i> (2014) and
+          <i class="booktitle">The Lives of Michel Foucault</i> (1993) by David Macey.
+        </li>
+        <li>Schwan, Anne; Shapiro, Stephen:
+          <i class="booktitle">How to Read Foucault's Discipline and Punish</i>. How to Read Theory. Pluto Press, 2011. (192 pages)
+          <a href="https://www.plutobooks.com/9780745329802/how-to-read-foucaults-discipline-and-punish/"><abbr>ISBN</abbr> 9780745329802</a>.
+        </li>
+      </ul>
+      <p>Main works in order of publication:</p>
+      <ul>
+        <li><span lang="fr">Foucault, Michel:
+          <i class="booktitle">Folie et déraison : histoire de la folie à l'âge classique</i>. </span> [1960]
+          Second edition: <span lang="fr"><i class="booktitle">Histoire de la folie à l'âge classique</i>. Gallimard,</span> 1972, 1976. (700 pages)
+          <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/Tel/Histoire-de-la-folie-a-l-age-classique" hreflang="fr"><abbr>ISBN</abbr> 9782070295821</a>.
+        </li>
+        <li><span lang="fr">Foucault, Michel:
+          <i class="booktitle">Naissance de la clinique : une archéologie du regard médical</i>. Presses universitaires de France,</span> 1963, 2015. (300 pages)
+          <a href="https://www.puf.com/content/Naissance_de_la_clinique" hreflang="fr"><abbr>ISBN</abbr> 978-2-13-065197-0</a>.
+        </li>
+        <li><span lang="fr">Foucault, Michel:
+          <i class="booktitle">Raymond Roussel</i>. Gallimard,</span> 1963, 1992. (256 pages)
+          <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/Folio/Folio-essais/Raymond-Roussel" hreflang="fr"><abbr>ISBN</abbr> 2070327280</a>.
+        </li>
+        <li><span lang="fr">Foucault, Michel:
+          <i class="booktitle">Les Mots et les choses</i>. Gallimard,</span> 1966, 1990. (406 pages)
+          <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/Tel/Les-mots-et-les-choses" hreflang="fr"><abbr>ISBN</abbr> 9782070293353</a>.
+        </li>
+        <li><span lang="fr">Foucault, Michel:
+          <i class="booktitle">L'Archéologie du savoir</i>. Gallimard,</span> 1969, 2008. (294 pages)
+          <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/Tel/L-archeologie-du-savoir" hreflang="fr"><abbr>ISBN</abbr> 9782070119875</a>.
+        </li>
+        <li><span lang="fr">Foucault, Michel:
+          <i class="booktitle">Surveiller et punir</i>. Gallimard,</span> 1975, 1993. (400 pages)
+          <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/Tel/Surveiller-et-punir" hreflang="fr"><abbr>ISBN</abbr> 9782070729685</a>.
+        </li>
+        <li><span lang="fr">Foucault, Michel:
+          <i class="booktitle">Histoire de la sexualité 1: La Volonté de savoir</i>. Gallimard,</span> 1976, 1994. (224 pages)
+          <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/Tel/La-volonte-de-savoir" hreflang="fr"><abbr>ISBN</abbr> 9782070740703</a>/
+          <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/Folio/Folioplus-philosophie/La-Volonte-de-savoir" hreflang="fr"><abbr>ISBN</abbr> 9782070338900 (Folioplus, 2006)</a>.
+        </li>
+        <li><span lang="fr">Foucault, Michel:
+          <i class="booktitle">Histoire de la sexualité 2: L'Usage des plaisirs</i>. Gallimard,</span> 1984, 1997. (350 pages)
+          <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/Tel/L-usage-des-plaisirs" hreflang="fr"><abbr>ISBN</abbr> 9782070746736</a>
+        </li>
+        <li><span lang="fr">Foucault, Michel:
+          <i class="booktitle">Histoire de la sexualité 3: Le Souci de soi</i>. Gallimard,</span> 1984, 1997. (336 pages)
+          <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/Tel/Le-souci-de-soi" hreflang="fr"><abbr>ISBN</abbr> 9782070746743</a>.
+        </li>
+        <li><span lang="fr">Foucault, Michel:
+          <i class="booktitle">Histoire de la sexualité 4: Les Aveux de la chair</i>. Bibliothèque des Histoires. Gallimard,</span> 2018. (448 pages)
+          <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/Bibliotheque-des-Histoires/Les-aveux-de-la-chair" hreflang="fr"><abbr>ISBN</abbr> 9782072700347</a>.
+        </li>
+      </ul>
+      <!--collected works and anthologies:
+        Philosophie: Anthologie. Gallimard, 2004. http://www.gallimard.fr/Catalogue/GALLIMARD/Folio/Folio-essais/Philosophie
+         Œuvres, tome I. Pléiade. http://www.gallimard.fr/Catalogue/GALLIMARD/Bibliotheque-de-la-Pleiade/OEuvres93
+         Œuvres, tome II. Pléiade. http://www.gallimard.fr/Catalogue/GALLIMARD/Bibliotheque-de-la-Pleiade/OEuvres94
+      -->
+
       <h3>John Searle (born 1932)</h3>
       <ul>
         <li>Searle, John R.:
@@ -1976,18 +2046,6 @@
           <i class="booktitle">The Teleological Ethics of Fakhr al-Dīn al-Rāzī</i> by Ayman Shihadeh
           (<a href="https://brill.com/view/title/11560">Brill, 2006</a>).
           <!--@@also check Adamson's own books-->
-        </li>
-        <li>Gutting, Gary:
-          <a href="https://fivebooks.com/best-books/gary-gutting-foucault-best-books/">The best books on Foucault</a>,
-          <i class="website">Five Books</i> (no date). Garry Gutting is the author of
-          <i class="booktitle">Foucault: A Very Short Introduction</i> (Oxford University Press, 2005,
-          <a href="https://global.oup.com/academic/product/foucault-a-very-short-introduction-9780192805577"><abbr>ISBN</abbr> 9780192805577</a>).
-          Gutting recommends the following books:
-          <i class="booktitle">How to Read Foucault</i> (2007) by Johanna Oksala,
-          <i class="booktitle">The Philosophy of Foucault</i> (2006) by Todd May,
-          <i class="booktitle">Bodies and Pleasures: Foucault and the Politics of Sexual Normalization</i> (1999) by Ladelle McWhorter,
-          <i class="booktitle">The Cambridge Foucault Lexicon</i> (2014) and
-          <i class="booktitle">The Lives of Michel Foucault</i> (1993) by David Macey.
         </li>
         <li>
           <a href="https://fivebooks.com/best-books/luciano-floridi-philosophy-information/">Luciano Floridi recommends the best books on the Philosophy of Information</a>,
