Add: Lopez: The Best Books on Buddhism

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2242,6 +2242,19 @@
             <li><i class="booktitle">Come and See Yourself</i> by Ayya Khema.</li>
           </ul>
         </li>
+        <li>Donald S Lopez Jr:
+          <a href="https://fivebooks.com/best-books/donald-s-lopez-jr-on-buddhism/">The Best Books on Buddhism</a>,
+          <i class="website">Five Books</i>, 02.05.2011. Donald S Lopez Jr, author of <i class="booktitle">The Story of Buddhism</i>,
+          recommends the following books:
+          <ul>
+            <li><i class="booktitle">The Lotus Sutra</i>, translated by Tsugarani Kubo and Akira Yuyama,</li>
+            <li><i class="booktitle">Introduction to the History of Indian Buddhism</i> by Eugène Burnouf,</li>
+            <li><i class="booktitle">Bones, Stones, and Buddhist Monks</i> by Gregory Schopen,</li>
+            <li><i class="booktitle">Words of My Pefect Teacher</i> by Patrul Rinpoche,</li>
+            <li><i class="booktitle">Journey to the West</i>, translated by Anthony Yu
+            (and Xuanzang's <i class="booktitle">Great Tang Records on the Western Regions</i>).</li>
+          </ul>
+        </li>
       </ul>
     </section>
 
