--- a/lijst.html
+++ b/lijst.html
@@ -293,7 +293,7 @@
         <i class="booktitle">Economics Rules: The Rights and Wrongs of the Dismal Science</i>. Oxford University Press, 2017.
         <a href="https://global.oup.com/academic/product/economics-rules-9780198736905?q=economics%20rules"><abbr>ISBN</abbr>  9780198736905</a>.
         (W. W. Norton &amp; Company, 2016. <a href="http://books.wwnorton.com/books/detail.aspx?ID=4294992109"><abbr>ISBN</abbr> 978-0-393-35341-9</a>.)
-        (See also <a href="http://www.lse.ac.uk/website-archive/newsAndMedia/videoAndAudio/channels/publicLecturesAndEvents/player.aspx?&id=3225">Economics Rules: the rights and wrongs of the dismal science</a> (video).)
+        (See also <a href="http://www.lse.ac.uk/website-archive/newsAndMedia/videoAndAudio/channels/publicLecturesAndEvents/player.aspx?&am;id=3225">Economics Rules: the rights and wrongs of the dismal science</a> (video).)
       </li>
       <li class="perhapsnot" lang="fr">Halimi, Serge&nbsp;: <a href="https://fr.wikipedia.org/wiki/Le_Grand_Bond_en_arri%C3%A8re"><i class="booktitle">Le Grand Bond en arrière&nbsp;: Comment l’ordre libéral s’est imposé au monde</i></a>. 2004.
         [Fayard, 2004] Nouvelle édition revue et actualisée par l’auteur. Agon, 2012. (792 pages)
@@ -364,7 +364,7 @@
       -->
       <li class="perhapsnot" lang="fr">Michéa, Jean-Claude: <i class="booktitle">Notre ennemi, le capital</i>.
         Flammarion, 2017.
-        <a href="http://editions.flammarion.com/Albums_Detail.cfm?ID=50454&levelCode=home"><abbr>ISBN</abbr> 9782081395602</a>.
+        <a href="http://editions.flammarion.com/Albums_Detail.cfm?ID=50454&amp;levelCode=home"><abbr>ISBN</abbr> 9782081395602</a>.
       </li>
       <li class="perhapsnot" lang="fr">Zucman, Gabriel: <i class="booktitle">La Richesse cachée des nations. Enquête sur les paradis fiscaux</i>.
         Seuil, 2013. (128 pages)
@@ -480,10 +480,6 @@
       <li class="perhapsnot">Slater, Eliot: <i class="booktitle">The Problem of The Reign of King Edward III: A Statistical Approach</i>.
         New Cambridge Shakespeare Studies and Supplementary Texts. Cambridge University Press, 2009.
         <a href="http://www.cambridge.org/de/academic/subjects/literature/renaissance-and-early-modern-literature/problem-reign-king-edward-iii-statistical-approach?format=PB"><abbr>ISBN</abbr> 9780521123488</a>.
-      </li>
-      <li>
-        <i class="booktitle">The Epic of Gilgamesh</i>. Translated and edited by Benjamin R. Foster. Second Edition. Norton, 2019. (256 pages)
-        <a href="https://wwnorton.com/books/9780393643985"><abbr>ISBN</abbr> 978-0-393-64398-5</a>.
       </li>
       <li>Karetryk, Bryan (editor): <i class="booktitle">Russian Émigré Short Stories from Bunin to Yanovsky</i>. Penguin, 2017. (464 pages)
         <a href="https://www.penguin.co.uk/books/283003/russian-emigre-short-stories-from-bunin-to-yanovsky/"><abbr>ISBN</abbr> 978 0241310908</a>.
