Add: Shapiro: How to Read Marx's Capital

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -198,6 +198,13 @@
           See the Wikipedia article
           <a href="https://en.wikipedia.org/wiki/Marxism_and_Morality">Marxism and Morality</a>.
         </li>
+        <li>Shapiro, Stephen:
+          <i class="booktitle">How to Read Marx's Capital</i>. How to Read Theory. Pluto Press, 2008. (192 pages)
+          <a href="https://www.plutobooks.com/9780745325613/how-to-read-marxs-capital/"><abbr>ISBN</abbr> 9780745325613</a>.
+          <br />From the publisher's book description:
+          <q>Capital Volume I is essential reading on many undergraduate courses, but the structure and style of the book can be confusing for students, leading them to abandon the text.
+          This book is a clear guide to reading Marx's classic text, which explains the reasoning behind the book's structure and provides help with the more technical aspects that non-economists may find taxing. (&hellip;)</q>
+        </li>
         <li>Davis, Mike:
           <i class="booktitle">Old Gods, New Enigmas: Marx’s Lost Theory</i>. Verso, 2018 (320 pages)
           <a href="https://www.versobooks.com/books/2779-old-gods-new-enigmas"><abbr>ISBN</abbr> 9781788732161</a>.
