Add: Les métamorphoses de Tintin

--- a/lijst.html
+++ b/lijst.html
@@ -261,18 +261,18 @@
   <section id="economics-politics">
     <h2>Economics and Politics</h2>
     <ul>
-      <li>Smith, Adam:
+      <li class="perhapsnot">Smith, Adam:
         <strong><i class="booktitle">An Inquiry into the Nature and Causes of the Wealth of Nations</i></strong>.
         Edited by Edwin Cannan. With a Preface by George J. Stigler.
         University of Chicago Press, 1977. (Volume 1: 524 pages; volume 2: 568 pages)
         <a href="http://www.press.uchicago.edu/ucp/books/book/chicago/I/bo3637045.html"><abbr>ISBN</abbr> 9780226763743</a>.
         <!--Smith's text is reprinted in UK spelling. Recommended by David Pakman: https://www.youtube.com/watch?v=WaUuT_bpPDQ -->
       </li>
-      <li>Evensky, Jerry:
+      <li class="perhapsnot">Evensky, Jerry:
         <i class="booktitle">Adam Smith's Wealth of Nations: A Reader's Guide</i>. Cambridge University Press, 2015. (293 pages)
         <a href="http://www.cambridge.org/de/academic/subjects/economics/history-economic-thought-and-methodology/adam-smiths-wealth-nations-readers-guide?format=PB"><abbr>ISBN</abbr> 978-1107653764</a>.
       </li>
-      <li>Norman, Jesse:
+      <li class="perhapsnot">Norman, Jesse:
         <i class="booktitle">Adam Smith: What He Thought, and Why it Matters</i>. Allen Lane, 2018.
         <a href="https://www.penguin.co.uk/books/307560/adam-smith/9780241328491/"><abbr>ISBN</abbr> 9780241328491</a>.
       </li>
@@ -314,7 +314,7 @@
         -->
       </li>
       <li>Deaton, Angus: <i class="booktitle">The Great Escape: Health, Wealth, and the Origins of Inequality</i>.
-        Princeton University Press, 2013.
+        Princeton University Press, 2013. (376 pages)
         <a href="https://press.princeton.edu/titles/10054.html"><abbr>ISBN</abbr> 9780691153544</a>.
         <!-- Recommended by David Pakman: https://www.youtube.com/watch?v=WaUuT_bpPDQ
           + Kahneman: Think Fast and Slow + Dan Ariely.
@@ -330,9 +330,9 @@
       </li>
       <li>Chomsky, Noam; McChesney, Robert: <i class="booktitle">Profit Over People: Neoliberalism and Global Order</i>. Seven Stories Press, 1999. (176 pages)
         <a href="https://www.sevenstories.com/books/3435-profit-over-people"><abbr>ISBN</abbr> 9781888363821</a>
-        (e-book: <abbr>ISBN</abbr> 9781609802912;
+        <!--(e-book: <abbr>ISBN</abbr> 9781609802912;
         <a href="https://archive.org/stream/NoamChomskyNecessaryIllusions/Noam%20Chomsky/Noam%20Chomsky%20-%20Profit%20Over%20People#page/n0/mode/2up">German translation on Archive.org</a>).
-        <br />(<a href="https://www.sevenstories.com/collections/chomsky">Other books by Chomsky</a> published by Seven Stories Press.)
+        <br />(<a href="https://www.sevenstories.com/collections/chomsky">Other books by Chomsky</a> published by Seven Stories Press.)-->
       </li>
       <li class="perhapsnot">Varoufakis, Yanis: <i class="booktitle">The Global Minotaur</i>.
         Zed Books, 2011. 3nd edition, 2015.
@@ -345,22 +345,22 @@
       </li>
       <li>Monbiot, George:
         <strong><i class="booktitle">Out of the Wreckage: A New Politics for an Age of Crisis</i></strong>.
-        Verso Books, 2017.
+        Verso Books, 2017. (224 pages)
         <a href="https://www.versobooks.com/books/2571-out-of-the-wreckage"><abbr>ISBN</abbr> 9781786632883</a>.
       </li>
       <!--
-        * Tim Di Muzio: The 1% and the Rest of Us: A Political Economy of Dominant Ownership. Zed Books: https://www.zedbooks.net/shop/book/the-1-and-the-rest-of-us/ 
-        * Eric Hazan and Kamo: First Measures of the Coming Insurrection. Zed Books: https://www.zedbooks.net/shop/book/first-measures-of-the-coming-insurrection/ 
-        * Aidan Ricketts: The Activists' Handbook: A Step-by-Step Guide to Participatory Democracy. Zed Books: https://www.zedbooks.net/shop/book/the-activists-handbook/ 
-        * Anna Feigenbaum, Fabian Frenzel, and Patrick McCurdy: Protest Camps. Zed Books: https://www.zedbooks.net/shop/book/protest-camps/ 
+        * Tim Di Muzio: The 1% and the Rest of Us: A Political Economy of Dominant Ownership. Zed Books: https://www.zedbooks.net/shop/book/the-1-and-the-rest-of-us/
+        * Eric Hazan and Kamo: First Measures of the Coming Insurrection. Zed Books: https://www.zedbooks.net/shop/book/first-measures-of-the-coming-insurrection/
+        * Aidan Ricketts: The Activists' Handbook: A Step-by-Step Guide to Participatory Democracy. Zed Books: https://www.zedbooks.net/shop/book/the-activists-handbook/
+        * Anna Feigenbaum, Fabian Frenzel, and Patrick McCurdy: Protest Camps. Zed Books: https://www.zedbooks.net/shop/book/protest-camps/
         * William Blum: America's Deadliest Export: Democracy – The Truth about US Foreign Policy and Everything Else. Zed Books: https://www.zedbooks.net/shop/book/americas-deadliest-export/
           [possible follow up to Naomi Klein's "The Shock Doctrine"]
-        * Roger Burbach, Michael Fox, and Federico Fuentes: Latin America's Turbulent Transitions: The Future of Twenty-First Century Socialism. Zed Books: https://www.zedbooks.net/shop/book/latin-americas-turbulent-transitions/ 
+        * Roger Burbach, Michael Fox, and Federico Fuentes: Latin America's Turbulent Transitions: The Future of Twenty-First Century Socialism. Zed Books: https://www.zedbooks.net/shop/book/latin-americas-turbulent-transitions/
         * ? Ewald Engelen: De schaduwelite voor en na de crisis (2014, http://nl.aup.nl/books/9789089646705-de-schaduwelite-voor-en-na-de-crisis.html); 'Engelen is buitengewoon kritisch over de economische wetenschap, waarvan hij de beoefenaars beschouwt als "verkapte mathematici die worden afgerekend op publicaties in verkapte wiskundetijdschriften, (...)"'
-        * ? Ewald Engelen et al: After the Great Complacence: Financial Crisis and the Politics of Reform. Oxford UP, 2011: https://global.oup.com/academic/product/after-the-great-complacence-9780199589081 
-        * ? Morton Keller: Obama's Time: A History. Oxford UP, 2015: https://global.oup.com/academic/product/obamas-time-9780199383375 
-        * ? Colin Dueck: The Obama Doctrine: American Grand Strategy Today. Oxford UP, 2015: https://global.oup.com/academic/product/the-obama-doctrine-9780190202620 
-        * Hans Christoph Binswanger (1929 – 2018): https://de.wikipedia.org/wiki/Hans_Christoph_Binswanger 
+        * ? Ewald Engelen et al: After the Great Complacence: Financial Crisis and the Politics of Reform. Oxford UP, 2011: https://global.oup.com/academic/product/after-the-great-complacence-9780199589081
+        * ? Morton Keller: Obama's Time: A History. Oxford UP, 2015: https://global.oup.com/academic/product/obamas-time-9780199383375
+        * ? Colin Dueck: The Obama Doctrine: American Grand Strategy Today. Oxford UP, 2015: https://global.oup.com/academic/product/the-obama-doctrine-9780190202620
+        * Hans Christoph Binswanger (1929 – 2018): https://de.wikipedia.org/wiki/Hans_Christoph_Binswanger
       -->
       <li class="perhapsnot" lang="fr">Michéa, Jean-Claude: <i class="booktitle">Notre ennemi, le capital</i>.
         Flammarion, 2017.
@@ -510,10 +510,10 @@
         <a href="https://canongate.co.uk/books/1924-mastermind-how-to-think-like-sherlock-holmes/"><abbr>ISBN</abbr> [978-0857867278]</a>.</del>
       </li>
       <li class="perhapsnot">Haidt, Jonathan:
-        <i class="booktitle">The Righteous Mind: Why Good People are Divided by Politics and Religion</i>. Vintage (Penguin), 2013.
+        <i class="booktitle">The Righteous Mind: Why Good People are Divided by Politics and Religion</i>. Vintage (Penguin), 2013. (528 pages)
         <a href="https://www.penguin.co.uk/books/56726/the-righteous-mind/9780141039169/"><abbr>ISBN</abbr> 9780141039169</a>.
       </li>
-      <li>Peterson, Jordan B.:
+      <li class="perhapsnot">Peterson, Jordan B.:
         <i class="booktitle">Maps of Meaning: The Architecture of Belief</i>. Routledge, 1999. (564 pages)
         <a href="https://www.routledge.com/Maps-of-Meaning-The-Architecture-of-Belief/Peterson/p/book/9780415922227"><abbr>ISBN</abbr> 9780415922227</a>.
         <br />See also the Wikipedia article
@@ -526,7 +526,7 @@
   <section id="misc">
     <h2>Various Other Topics</h2>
     <ul>
-      <li>Sampson, Geoffrey:
+      <li> class="perhapsnot"Sampson, Geoffrey:
         <i class="booktitle">[Educating Eve: ] The 'Language Instinct' Debate</i>. Continuum, 2005. (240 pages)
         <a href="https://www.bloomsbury.com/uk/the-language-instinct-debate-9780826473851/"><abbr>ISBN</abbr> 9780826473851 (paperback)</a>.
       </li>
@@ -633,6 +633,11 @@
       <li><span lang="fr">Boniface, Pascal: <i class="booktitle">Les Intellectuels intègres</i>. Jean-Claude Gawsewitch Éditeur,</span> 2013.
         <abbr>ISBN</abbr> 9782350134178.
       </li>
+      <li><span lang="fr">Apostolidès, Jean-Marie:
+        <i class="booktitle">Les métamorphoses de Tintin</i>. Flammarion,</span> 2011. (448 pages)
+        <a href="https://editions.flammarion.com/les-metamorphoses-de-tintin/9782081249073"><abbr>ISBN</abbr> 9782081249073</a>.
+        <!--https://www.youtube.com/watch?v=dZkJd10feqQ -->
+      </li>
       <!--
       <li> : <i class="booktitle"></i>. 
         <a href=""><abbr>ISBN</abbr> </a>.
@@ -649,10 +654,9 @@
     * Evan Osnos: Große @@
   -->
   <!--Hergé & Tintin:
-    * Benoît Peeters: Hergé, fils de Tintin. Flammarion, 2016.
-    * Pierre Assouline: Hergé. Gallimard, 1998.
-    * Jean-Marie Apostolidès: Les métamorphoses de Tintin. Flammarion, 2011. https://www.youtube.com/watch?v=dZkJd10feqQ 
-    * Albert Algoud: Dictionnaire amoureux de Tintin. Plon, 2016: https://www.amazon.fr/Dictionnaire-amoureux-Tintin-Albert-ALGOUD/dp/2259241387/ 
+    * Benoît Peeters: Hergé, fils de Tintin. Flammarion, 2016. 642 pages: https://editions.flammarion.com/herge-fils-de-tintin/9782081267893
+    * Jan Baetens: Hergé écrivain. Flammarion, 2010. 224 pages: https://editions.flammarion.com/herge-ecrivain/9782081246157
+    * Albert Algoud: Dictionnaire amoureux de Tintin. Plon, 2016: https://www.amazon.fr/Dictionnaire-amoureux-Tintin-Albert-ALGOUD/dp/2259241387/
     * Pol Vandromme: Le Monde de Tintin. La Table Ronde, 1994.
     * Numa Sadoul: Tintin et moi : Entretiens avec Hergé.  Champs Flammarion (https://www.youtube.com/watch?v=UkFzGNrPCeg)
   -->
@@ -660,22 +664,21 @@
     * Simon Price, Peter Thonemann: The Birth of Classical Europe: A History from Troy to Augustine (The Penguin History of Europe). Penguin Books, 2011.
     * Peter Jones: Vote for Caesar: How the Ancient Greeks and Romans Solved the Problems of Today. Orion, 2009.
     * William Blum: America's Deadliest Export. Zed Books, 2014.
-    * Sebastien Valkenberg: Op denkles: hoe wapenen we ons tegen 'Iedereen heeft zijn eigen waarheid' en andere modieuze denkbeelden. Ambo Anthos, 2015: https://www.amboanthos.nl/boek/op-denkles/ 
+    * Sebastien Valkenberg: Op denkles: hoe wapenen we ons tegen 'Iedereen heeft zijn eigen waarheid' en andere modieuze denkbeelden. Ambo Anthos, 2015: https://www.amboanthos.nl/boek/op-denkles/
     * Jason W. Moore: Capitalism in the Web of Life: Ecology and the Accumulation of Capital. Verso, 2015.
     * Adrian Wooldridge, John Micklethwait: The Fourth Revolution: The Global Race to Reinvent the State. Penguin, 2015. Written by two senior editors of The Economist; claims that government is bloated and argues for a return to laissez-faire.
     * Dirk Van der Cruyse: Madame Palatine. Fayard, 1988.
     * Bernard Spolsky: Language Management. Cambridge University Press, 2009.
     * William Clifford: The Ethics of Belief and Other Essays. Prometheus Books, 1999. https://www.amazon.fr/Ethics-Belief-Other-Essays/dp/1573926914/
-    * William James: Writings 1878-1899: Psychology: Briefer Course / The Will to Believe / Talks to Teachers and to Students / Essays. Library of America, 1992. https://www.amazon.fr/William-James-Writings-1878-1899-Psychology/dp/0940450720/ 
-    * William K. Clifford & William James: L’immoralité de la croyance religieuse: L’éthique de la croyance de William Clifford, suivi de La volonté de croire de William James. Agone, 2018: https://agone.org/bancdessais/limmoralitedelacroyancereligieuse/ 
+    * William James: Writings 1878-1899: Psychology: Briefer Course / The Will to Believe / Talks to Teachers and to Students / Essays. Library of America, 1992. https://www.amazon.fr/William-James-Writings-1878-1899-Psychology/dp/0940450720/
+    * William K. Clifford & William James: L’immoralité de la croyance religieuse: L’éthique de la croyance de William Clifford, suivi de La volonté de croire de William James. Agone, 2018: https://agone.org/bancdessais/limmoralitedelacroyancereligieuse/
     * Owen Jones: "Books that moved us forward in 2017": https://www.penguin.co.uk/articles/features/2017/dec/owen-jones-books-that-moved-us-forward-in-2017/
-    * Twelve Theories of Human Nature, sixth edition, 2012: https://global.oup.com/academic/product/twelve-theories-of-human-nature-9780199859030?q=theories%20of%20human%20nature 
+    * Twelve Theories of Human Nature, sixth edition, 2012: https://global.oup.com/academic/product/twelve-theories-of-human-nature-9780199859030?q=theories%20of%20human%20nature
     * Jonathan Wolff: An Introduction to Political Philosophy. Oxford University Press, 2015. ISBN 9780199658015. https://global.oup.com/academic/product/an-introduction-to-political-philosophy-9780199658015
-    * Jonathan Wolff: Why Read Marx Today? Oxford University Press, 2003. ISBN 9780192805058. 
-    * Josh Waitzkin: The Art of Learning: An Inner Journey to Optimal Performance. Free Press (Simon & Schuster), 2008. ISBN 9780743277464: http://www.simonandschuster.com/books/The-Art-of-Learning/Josh-Waitzkin/9780743277464  
-    * Robert Bringhurst: The Elements of Typographics Style. 
+    * Jonathan Wolff: Why Read Marx Today? Oxford University Press, 2003. ISBN 9780192805058.
+    * Josh Waitzkin: The Art of Learning: An Inner Journey to Optimal Performance. Free Press (Simon & Schuster), 2008. ISBN 9780743277464: http://www.simonandschuster.com/books/The-Art-of-Learning/Josh-Waitzkin/9780743277464
+    * Robert Bringhurst: The Elements of Typographics Style.
   -->
-
   </main>
 
   <footer>
