Fix validation error

--- a/lijst.html
+++ b/lijst.html
@@ -526,14 +526,10 @@
   <section id="misc">
     <h2>Various Other Topics</h2>
     <ul>
-      <li> class="perhapsnot"Sampson, Geoffrey:
-        <i class="booktitle">[Educating Eve: ] The 'Language Instinct' Debate</i>. Continuum, 2005. (240 pages)
-        <a href="https://www.bloomsbury.com/uk/the-language-instinct-debate-9780826473851/"><abbr>ISBN</abbr> 9780826473851 (paperback)</a>.
-      </li>
-      <li class="perhapsnot">Rose, Todd:
-        <i class="booktitle">The End of Average: How We Succeed in a World That Values Sameness</i>. HarperCollins, 2016. (256 pages)
-        <a href="https://www.harpercollins.com/9780062358363/the-end-of-average/"><abbr>ISBN</abbr> 9780062358363</a>.
-        (<a href="https://www.toddrose.com/endofaverage">The End of Average &mdash; Todd Rose (author's website)</a>)
+      <li><span lang="fr">Apostolidès, Jean-Marie:
+        <i class="booktitle">Les métamorphoses de Tintin</i>. Flammarion,</span> 2011. (448 pages)
+        <a href="https://editions.flammarion.com/les-metamorphoses-de-tintin/9782081249073"><abbr>ISBN</abbr> 9782081249073</a>.
+        <!--https://www.youtube.com/watch?v=dZkJd10feqQ -->
       </li>
       <li>Simon, Herbert A.:
         <strong><i class="booktitle">The Sciences of the Artificial</i></strong>. Third edition. <abbr>MIT</abbr> Press, 1996. (248 pages)
@@ -542,6 +538,15 @@
       <li>Simon, Herbert A.:
         <i class="booktitle">Models of Bounded Rationality, Volume 3: Emperically Grounded Economic Reason</i>. <abbr>MIT</abbr> Press, 1997. (336 pages)
         <a href="https://mitpress.mit.edu/books/models-bounded-rationality-0"><abbr>ISBN</abbr> 9780262519434</a>.
+      </li>
+      <li class="perhapsnot">Sampson, Geoffrey:
+        <i class="booktitle">[Educating Eve: ] The 'Language Instinct' Debate</i>. Continuum, 2005. (240 pages)
+        <a href="https://www.bloomsbury.com/uk/the-language-instinct-debate-9780826473851/"><abbr>ISBN</abbr> 9780826473851 (paperback)</a>.
+      </li>
+      <li class="perhapsnot">Rose, Todd:
+        <i class="booktitle">The End of Average: How We Succeed in a World That Values Sameness</i>. HarperCollins, 2016. (256 pages)
+        <a href="https://www.harpercollins.com/9780062358363/the-end-of-average/"><abbr>ISBN</abbr> 9780062358363</a>.
+        (<a href="https://www.toddrose.com/endofaverage">The End of Average &mdash; Todd Rose (author's website)</a>)
       </li>
       <li class="perhapsnot">Lustig, Robert H.:
         <i class="http://www.penguinrandomhouse.com/books/531013/the-hacking-of-the-american-mind-by-robert-h-lustig-md-msl/9781101982594/">The Hacking of the American Mind: The Science Behind the Corporate Takeover of Our Bodies and Brains</i>.
@@ -632,11 +637,6 @@
       </li>
       <li><span lang="fr">Boniface, Pascal: <i class="booktitle">Les Intellectuels intègres</i>. Jean-Claude Gawsewitch Éditeur,</span> 2013.
         <abbr>ISBN</abbr> 9782350134178.
-      </li>
-      <li><span lang="fr">Apostolidès, Jean-Marie:
-        <i class="booktitle">Les métamorphoses de Tintin</i>. Flammarion,</span> 2011. (448 pages)
-        <a href="https://editions.flammarion.com/les-metamorphoses-de-tintin/9782081249073"><abbr>ISBN</abbr> 9782081249073</a>.
-        <!--https://www.youtube.com/watch?v=dZkJd10feqQ -->
       </li>
       <!--
       <li> : <i class="booktitle"></i>. 
