Add: Bould and Miéville: Red Planets

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -205,6 +205,13 @@
           <q>Capital Volume I is essential reading on many undergraduate courses, but the structure and style of the book can be confusing for students, leading them to abandon the text.
           This book is a clear guide to reading Marx's classic text, which explains the reasoning behind the book's structure and provides help with the more technical aspects that non-economists may find taxing. (&hellip;)</q>
         </li>
+        <li>Bould, Mark; Miéville, China (editors):
+          <i class="booktitle">Red Planets: Marxism and Science Fiction</i>. Marxism and Culture. Pluto Press, 2009. (304 pages)
+          <a href="https://www.plutobooks.com/9780745327303/red-planets/"><abbr>ISBN</abbr> 9780745327303</a>.
+          <br />From the publisher's book description:
+          <q>(&hellip;) As a genre, sf is ideally suited to critiquing the present through its explorations of the social and political possibilities of the future.
+          This is the first collection to combine analyses of sf literature and films within a broader overview of Marxist theory and critical perspectives on the genre. (&hellip;)</q>
+        </li>
         <li>Davis, Mike:
           <i class="booktitle">Old Gods, New Enigmas: Marx’s Lost Theory</i>. Verso, 2018 (320 pages)
           <a href="https://www.versobooks.com/books/2779-old-gods-new-enigmas"><abbr>ISBN</abbr> 9781788732161</a>.
