Add: Hill: The Best Books on Hannah Arendt

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2255,6 +2255,17 @@
             (and Xuanzang's <i class="booktitle">Great Tang Records on the Western Regions</i>).</li>
           </ul>
         </li>
+        <li>Hill, Samantha Rose:
+          <a href="https://fivebooks.com/best-books/hannah-arendt-samantha-rose-hill/">The best books on Hannah Arendt</a>,
+          <i class="website">Five Books</i>, 05.06.2020. Samantha Rose Hill recommends the following books:
+          <ul>
+            <li><i class="booktitle">The Origins of Totalitarianism</i> by Hannah Arendt,</li>
+            <li><i class="booktitle">The Human Condition</i> by Hannah Arendt,</li>
+            <li><i class="booktitle">Men in Dark Times</i> by Hannah Arendt,</li>
+            <li><i class="booktitle">Thinking Without a Banister</i> by Hannah Arendt,</li>
+            <li><i class="booktitle">Hannah Arendt: For Love of the World</i> by Elisabeth.</li>
+          </ul>
+        </li>
       </ul>
     </section>
 
