Add: Law: Belief in supernatural beings is totally natural – and false

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -229,6 +229,11 @@
           <a href="https://philosophy.stackexchange.com/q/300/23586">Is the “omniscient-omnipotent-omnipresent” definition of God consistent?</a>
           This question was posted on Philosophy Stack Exchage in June 2011.
         </li>
+        <li>Law, Stephen:
+          <a href="https://aeon.co/ideas/belief-in-supernatural-beings-is-totally-natural-and-false">Belief in supernatural beings is totally natural – and false</a>,
+          <i class="website">Aeon</i>, 15.12.2015 (Creative Commons).
+          <!--@@reread/copy-->
+        </li>
       </ul>
     </section>
 
@@ -302,12 +307,12 @@
         </li>
         <li>Thrower, James:
           <i class="booktitle">The Alternative Tradition: Religion and the Rejection of Religion in the Ancient World</i>.  [1980] Religion and Society, Volume: 18. De Gruyter, 2011 (reprint).
-          <a href="https://www.degruyter.com/view/title/6049?rskey=KRSJuh&result=1"><abbr>ISBN</abbr> 978-90-279-7997-1</a>.<!-- From  €109.95  -->
+          <a href="https://www.degruyter.com/view/title/6049?rskey=KRSJuh&amp;result=1"><abbr>ISBN</abbr> 978-90-279-7997-1</a>.<!-- From  €109.95  -->
         </li>
         <li lang="fr">Durkheim, Émile:
           <i class="booktitle">Les Formes élémentaires de la vie religieuse</i>. [1912] <abbr>CNRS</abbr> Editions, 2014. (644 pages)
           <a href="https://www.cnrseditions.fr/catalogue/anthropologie-et-mondes-contemporains/les-formes-elementaires-de-la-vie-religieuse/" hreflang="fr"><abbr>ISBN</abbr> 9782271081681</a>.
-          <!-- https://fr.wikipedia.org/wiki/Les_Formes_%C3%A9l%C3%A9mentaires_de_la_vie_religieuse -->
+          <!--https://fr.wikipedia.org/wiki/Les_Formes_%C3%A9l%C3%A9mentaires_de_la_vie_religieuse -->
         </li>
         <li lang="fr">Caillois, Roger: <i class="booktitle">L'homme et le sacré</i>. [1950] Folio Essais. Gallimard, 1988. (256 pages)
           <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/Folio/Folio-essais/L-homme-et-le-sacre" hreflang="fr"><abbr>ISBN</abbr> 9782070324576</a>.
@@ -357,7 +362,7 @@
           <q>a transcendent cause beyond space and time, beyond the universe, that has brought the universe into being</q>.
           Craig ignores that <a href="https://en.wikipedia.org/wiki/Argument_from_ignorance">arguments from ignorance</a> are not good explanations.
           <br />As someone points out below the video:
-          <blockquote cite="https://www.youtube.com/watch?v=QBPYuFhDy7g&lc=UgwRbRoLFc1e3w5YIgN4AaABAg">
+          <blockquote cite="https://www.youtube.com/watch?v=QBPYuFhDy7g&amp;lc=UgwRbRoLFc1e3w5YIgN4AaABAg">
             &ldquo;Atheists have been taught to unthinkingly repeat a slogan, so to counter that, memorize what I just said and say it back to them verbatim!&rdquo;
             <br />The jokes almost write themselves.
           </blockquote>
@@ -530,7 +535,7 @@
           <br />These stories have no source. The post on <i class="website">The New Mind Journal</i> claims that the source is the
           <a href="https://www.smithsonianmag.com/">The Smithsonian (www.smithsonianmag.com)</a>,
           but there are
-          <a href="https://duckduckgo.com/?q=coffin+pope+Pius+site%3Asmithsonianmag.com&t=ffab&ia=web">no articles about the coffin of pope Pius I on the Smithsonian's website</a>,
+          <a href="https://duckduckgo.com/?q=coffin+pope+Pius+site%3Asmithsonianmag.com&amp;t=ffab&amp;ia=web">no articles about the coffin of pope Pius I on the Smithsonian's website</a>,
           so the story could very well be a fabrication.
           <!--Source: comment on David Pakman's video '"No Religion" is the Fastest Growing Religion in the US', 14.11.2018: https://www.youtube.com/watch?v=JUBaZPsbJ4Y
             Comment URL: https://www.youtube.com/watch?v=JUBaZPsbJ4Y&lc=UgypaxcTjXzdRzJiBFt4AaABAg.8neHNOlmTEI8neLJdlwp0Y
@@ -933,6 +938,10 @@
     <section>
       <h2></h2>
       <ul>
+        <li>
+          <a href=""></a>,
+          <i class=""></i>,
+        </li>
         <li>: <i class="booktitle"></i>.
           <a href=""><abbr>ISBN</abbr> </a>.
         </li>
